# xbot

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN_CONTEXT_BUILDER.md  LICENSE  README.md  SECURITY.md  START.md  core_agent_lines.sh  docker-compose.yml  package.json  pyproject.toml  usa_install.sh  xbot_code_review_2026-06-17.md  xbot_code_review_2026-06-17_v2.md  xbot_code_review_v2.0.14_to_head.md  xbot_upgrade_review_v2.0.14_to_v2.0.29.md
.claude/: settings.local.json
.claude/plans/: bug-fix-plan.md
.github/workflows/: runtime-v2-tests.yml
.xbot-dev/workspace/: IMPROVEMENT_PLAN.md
.xbot/crew_checkpoints/: test_crew_20260328_122709.json  test_crew_20260328_122710.json  test_crew_20260330_014108.json  test_crew_20260330_014220.json  test_crew_20260330_020658.json  test_crew_20260330_020841.json  (+2 more)
bridge/: eslint.config.mjs  package-lock.json  package.json
config_template/: README.md  config.json.example
desktop/: package-lock.json  package.json
docs/: AGENT_COLLABORATION_ROADMAP.md  AGENT_ROUTER_IMPLEMENTATION_PLAN_2026-03-20.md  AGENT_ROUTER_REFACTOR_PLAN_2026-03-20.md  ARCHITECTURE_FIX_PLAN.md  BUG_FIX_PLAN.md  CHANNEL_PLUGIN_GUIDE.md  CLAUDE_AGENT_SDK_CHANGELOG.md  CLAUDE_SDK_AGENT_REVIEW_2026-03-20.md  CLAUDE_SDK_BACKEND_IMPROVEMENT_ROADMAP.md  CODE_REVIEW_2026-07-09.md  CONCURRENCY_BOUNDARIES.md  CREW_DEVELOPER_GUIDE.md  CREW_DYNAMIC_PLANNER_DESIGN.md  CREW_DYNAMIC_PLANNER_IMPLEMENTATION.md  CREW_USER_GUIDE.md  CURRENT_AGENT_ARCHITECTURE_AND_ROADMAP_2026-03-20.md  DUAL_AGENT_ARCHITECTURE.md  LONG_TASK_DESIGN.md  MULTI_AGENT_FRAMEWORKS_RESEARCH.md  PERMISSION_HANDLER_DESIGN.md  REFACTORING_PLAN.md  SESSION_STATE_V2_MIGRATION.md  SKILLS_LOADING_STRATEGY.md  STATE_EVOLUTION_PLAN.md  STATE_EVOLUTION_RISK_ASSESSMENT.md  STATE_EVOLUTION_TASKS.md  UPGRADE_REVIEW_2026-07-09.md  XBOT_ACP_DESIGN.md  XBOT_ACP_IMPL_PLAN.md  XBOT_AGENT整体演进方案_2026-03-20.md  XBOT_AGENT能力增强路线图_2026-03-20.md  XBOT_CLAW_REBUILD_BLUEPRINT_2026-03-21.md  XBOT_TEAM_DESIGN.md  state-management-redesign.md  当前Agent架构与后续演进方向_2026-03-20.md
mcp/: MANIFEST.in  main.py  setup.py  todoist_resources.py  todoist_tools.py
mcp/todoist/: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  todoist_resources.py  todoist_tools.py
mcp/todoist/memory-bank/: progress.md  projectbrief.md  techContext.md
mcp/todoist/tests/: test_sdk_inspect.py  test_todoist_api.py
memory-ingest/: README.md  memory-ingest.toml.example  pyproject.toml
memory-ingest/deploy/: com.memory-ingest.plist.example  memory-ingest.cron.example
memory-ingest/src/memory_ingest/: __init__.py  cli.py  config.py  dedup.py  formatter.py  mem0_client.py  models.py  review_packet.py  scanner.py  server.py  service.py  state_store.py
memory-ingest/src/memory_ingest/extractors/: __init__.py  candidate_extractor.py
memory-ingest/src/memory_ingest/parsers/: __init__.py  docx_parser.py  pdf_parser.py  pptx_parser.py  text_like.py
memory-ingest/tests/: test_candidate_extractor.py  test_config.py  test_extractors.py  test_formatter.py  test_mem0_client.py  test_review_packet.py  test_scanner.py  test_server.py  test_service.py  test_state_store.py
scripts/: gateway_integration_smoke.py  migrate_memory.py  redeploy_xbot_gateway.sh  run_dual_track_soak.sh  run_dual_track_validation.sh  test_runtime_v2.sh  verify_dual_track.sh
tests/: __init__.py  conftest.py  test_agent_router_runtime.py  test_agent_service.py  test_alerting.py  test_ask_user_validation.py  test_atomic_dispatch.py  test_audio_support.py  test_azure_openai_provider.py  test_backend_session_operations.py  test_base_channel.py  test_boundary_comparison.py  test_bus_queue.py  test_cancelled_error_cleanup.py  test_cancelled_error_handling.py  test_capabilities.py  test_capability_policy.py  test_capability_state_registry_improvements.py  test_channel_manager.py  test_channel_plugins.py  test_channel_registry.py  test_claude_sdk_backend.py  test_cli_input.py  test_cli_runtime_selection.py  test_client_pool.py  test_client_pool_race_conditions.py  test_commands.py  test_commands_loader.py  test_concurrent_session_state.py  test_config_loader.py  test_config_migration.py  test_config_paths.py  test_config_validator.py  test_consolidate_offset.py  test_context.py  test_context_prompt_cache.py  test_crew.py  test_cron_bug_fixes.py  test_cron_service.py  test_cron_tool.py  (+133 more)
xbot/: __init__.py  __main__.py  exceptions.py  logging.py  metrics.py
xbot-acp/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
xbot-acp/config/: default.toml  feishu.toml  feishu.toml.example
xbot-acp/crates/acp-client/: Cargo.toml
xbot-acp/crates/acp-client/src/: channel.rs  client.rs  connection.rs  lib.rs  session.rs  types.rs
xbot-acp/crates/acp-client/src/agent/: claude.rs  codex.rs  mod.rs
xbot-acp/crates/acp-client/src/boundary/: file.rs  mod.rs  terminal.rs
xbot-acp/crates/app/: Cargo.toml
xbot-acp/crates/app/src/: config.rs  main.rs  router.rs
xbot-acp/crates/app/tests/: integration_agent_test.rs
xbot-acp/crates/feishu-channel/: Cargo.toml
xbot-acp/crates/feishu-channel/src/: api.rs  card.rs  channel.rs  lib.rs  message.rs  stream.rs  websocket.rs
xbot-codex/: README.md  config.feishu.toml  pyproject.toml
xbot-codex/src/xbot_codex/: bus.py  cli.py  commands.py  config.py  events.py  runtime.py
xbot-codex/src/xbot_codex/channels/: __init__.py  base.py  feishu.py  feishu_content.py  manager.py  telegram.py
xbot-codex/src/xbot_codex/codex/: transport.py
xbot-codex/src/xbot_codex/service/: app.py  health.py
xbot-codex/src/xbot_codex/session/: store.py
xbot-codex/tests/: test_bus.py  test_channel_manager.py  test_channel_policies.py  test_commands.py  test_config_loading.py  test_feishu_channel.py  test_feishu_parsing.py  test_health.py  test_runtime.py  test_runtime_errors.py  test_service_bootstrap.py  test_service_lifecycle.py  test_service_runtime_loop.py  test_session_store.py  test_telegram_channel.py  test_telegram_rendering.py  test_transport.py  test_transport_failures.py
(+869 files in other folders)
