[project]
name = "memory-ingest"
version = "0.1.0"
description = "Decoupled external knowledge to mem0 ingester"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "openai>=2.8.0",
    "pydantic>=2.12.0,<3.0.0",
    "typer>=0.20.0,<1.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.2",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
memory-ingest = "memory_ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
