[workspace]
members = [
    "crates/acp-client",
    "crates/feishu-channel",
    "crates/app",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["zhaobomin"]
license = "MIT"

[workspace.dependencies]
agent-client-protocol = "0.10.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
smol = "2"
async-process = "2"

# Internal crates
acp-client = { path = "crates/acp-client" }
feishu-channel = { path = "crates/feishu-channel" }