[project]
name = "xbot-codex"
version = "0.1.0"
description = "Independent Codex CLI channel bridge service"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "typer>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

[project.scripts]
xbot-codex = "xbot_codex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xbot_codex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
