[project]
name = "mcp-todoist"
description = "Todoist integration for MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "steven gonsalvez", email = "steven.gonsalvez@gmail.com"},
]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Use pure semantic versioning (no "v" prefix in git tags)
git_describe_command = "git describe --dirty --tags --long --match '[0-9]*.[0-9]*.[0-9]*' --first-parent"
# Ensure PyPI-compatible versions
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
