[package]
name = "acp-client"
version.workspace = true
edition.workspace = true

[dependencies]
agent-client-protocol.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"