[package]
name = "xbot-acp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xbot-acp"
path = "src/main.rs"

[dependencies]
acp-client.workspace = true
feishu-channel.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
anyhow = "1.0"
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
once_cell.workspace = true