[package]
name = "feishu-channel"
version.workspace = true
edition.workspace = true

[dependencies]
acp-client.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
regex.workspace = true
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
prost = "0.12"

[dev-dependencies]
mockito = "1"